--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.2.1",
+    "lodash": "^4.17.4",
     "mongodb": "^2.2.16",
     "mongoose": "^4.7.5",
     "request": "^2.79.0",
@@ -18,6 +19,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "",
+  "engines": {
+    "node": "7.2.0"
+  },
+  "author": "Dave Scott",
   "license": "ISC"
 }
