--- a/nutriview/package.json
+++ b/nutriview/package.json
@@ -29,7 +29,8 @@
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-popup": "^0.4.2"
   }
 }
